--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ categories = ["data-structures","date-and-time","encoding","parsing","value-form
 [dependencies]
 rand = "0.4.2"
 chrono = "0.4.2"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
