--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
+# See https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "rusty_ulid"
 version = "0.2.1"  # remember to update html_root_url in src/lib.rs
 description = "Rust ULID (Universally Unique Lexicographically Sortable Identifier) generation and processing"
 authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
 repository = "https://github.com/huxi/rusty_ulid"
-license = "MIT"
-# license-file = "LICENSE"
+license = "MIT/Apache-2.0"
 readme = "README.md"
 
 keywords = ["ulid", "uuid", "sortable", "identifier"]
