--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
 repository = "https://github.com/huxi/rusty_ulid"
 license = "MIT/Apache-2.0"
 readme = "README.md"
+edition = "2018"
 
 keywords = ["ulid", "uuid", "sortable", "identifier"]
 categories = ["data-structures","date-and-time","encoding","parsing","value-formatting"]
