--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,19 @@ edition = "2018"
 keywords = ["ulid", "uuid", "sortable", "identifier"]
 categories = ["data-structures","date-and-time","encoding","parsing","value-formatting"]
 
+[features]
+# The default set of optional packages. Most people will want to use these
+# packages, but they are strictly optional.
+default = ["serde"]
+
 [dependencies]
-rand = "0.6.1"
-chrono = "0.4.6"
+rand = "0.6"
+chrono = "0.4"
+serde = {version ="1", optional = true}
 
 [dev-dependencies]
 criterion = "0.2"
+serde_test = "1"
 
 [[bench]]
 name = "my_benchmark"
