--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: rust
 sudo: required
 
 rust:
+  - 1.34.0
   - stable
   - beta
   - nightly
 
 matrix:
+  include:
+  - env: RUSTFLAGS="-D warnings"
   allow_failures:
     - rust: nightly
 
