--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 version: ~> 1.0
 language: rust
 
+os:
+  - linux
+  - osx
+  - windows
+
 rust:
   - 1.34.0
   - stable
@@ -28,6 +33,7 @@ script:
   - cargo test --verbose
 
 jobs:
+  fast_finish: true
   allow_failures:
     - rust: nightly
 
