--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: rust
 
 os:
   - linux
-  # - osx
+  - osx
   - windows
 
 rust:
@@ -53,6 +53,7 @@ addons:
       - libiberty-dev
 
 after_success: |
+  [ $TRAVIS_OS_NAME = linux ] &&
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
   tar xzf master.tar.gz &&
   cd kcov-master &&
