--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ default = ["ulid-generation", "serde", "doc-comment"]
 ulid-generation = ["chrono", "rand"]
 
 [dependencies]
-rand = { version = "0.7", optional = true }
-chrono = { version = "0.4", optional = true }
+rand = { version = "0.8", optional = true }
+chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
 doc-comment = { version = "0.3", optional = true }
 
