Skip clippy step for 1.40.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,11 @@ after_script:
 - cargo-cache
 
 script:
+- echo "Rust version $TRAVIS_RUST_VERSION"
 - cargo build --verbose
-- cargo clippy --all-targets --all-features -- -D warnings
+- if [ $TRAVIS_RUST_VERSION != "1.40.0" ]; then
+    cargo clippy --all-targets --all-features -- -D warnings;
+  fi
 - cargo fmt --all -- --check
 - cargo test --verbose --no-default-features
 - cargo test --verbose --no-default-features --features "rand"
