--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # See https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "rusty_ulid"
-version = "0.11.0"  # remember to update html_root_url in src/lib.rs
+version = "0.11.0"                                                                                             # remember to update html_root_url in src/lib.rs
 description = "Rust ULID (Universally Unique Lexicographically Sortable Identifier) generation and processing"
 authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
 repository = "https://github.com/huxi/rusty_ulid"
@@ -10,17 +10,23 @@ readme = "README.md"
 edition = "2018"
 
 keywords = ["ulid", "uuid", "sortable", "identifier"]
-categories = ["data-structures", "date-and-time", "encoding", "parsing", "value-formatting"]
+categories = [
+    "data-structures",
+    "date-and-time",
+    "encoding",
+    "parsing",
+    "value-formatting",
+]
 
 [features]
 # The default set of optional packages. Most people will want to use these
 # packages, but they are strictly optional.
 default = ["ulid-generation", "serde", "doc-comment"]
-ulid-generation = ["chrono", "rand"]
+ulid-generation = ["rand", "time"]
 
 [dependencies]
 rand = { version = "0.8", optional = true }
-chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
+time = { version = "0.3", optional = true }
 serde = { version = "1", optional = true }
 doc-comment = { version = "0.3", optional = true }
 
