--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 # See https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "rusty_ulid"
-version = "0.11.0"                                                                                             # remember to update html_root_url in src/lib.rs
+# remember to update html_root_url in src/lib.rs
+version = "0.11.0"
 description = "Rust ULID (Universally Unique Lexicographically Sortable Identifier) generation and processing"
 authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
 repository = "https://github.com/huxi/rusty_ulid"
