move doc-comment to [dev-dependencies]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ categories = [
 [features]
 # The default set of optional packages. Most people will want to use these
 # packages, but they are strictly optional.
-default = ["ulid-generation", "serde", "doc-comment"]
+default = ["ulid-generation", "serde"]
 ulid-generation = ["rand", "chrono"]
 ulid-generation-time = ["rand", "time"]
 
@@ -31,10 +31,10 @@ rand = { version = "0.8", optional = true }
 time = { version = "0.3", optional = true }
 chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
-doc-comment = { version = "0.3", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
+doc-comment = "0.3"
 serde_test = "1"
 
 [[bench]]
