--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,20 +11,41 @@ env:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
         toolchain:
           - stable
           - 1.56.0
           - beta
           - nightly
-
     steps:
     - uses: actions/checkout@v3
     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
+    - name: Clippy
+      run: cargo clippy --verbose --all-targets --all-features -- -D warnings
+    - name: fmt
+      run: cargo fmt --all -- --check
+    - name: doc
+      run: cargo doc
+    - name: Run tests (default features)
       run: cargo test --verbose
+    - name: Run tests (no default features)
+      run: cargo test --verbose --no-default-features
+    - name: Run tests (all features) [chrono time rand serde]
+      run: cargo test --verbose --no-default-features --features "chrono time rand serde"
+    - name: Run tests [rand]
+      run: cargo test --verbose --no-default-features --features "rand"
+    - name: Run tests [chrono]
+      run: cargo test --verbose --no-default-features --features "chrono"
+    - name: Run tests [time]
+      run: cargo test --verbose --no-default-features --features "time"
+    - name: Run tests [serde]
+      run: cargo test --verbose --no-default-features --features "serde"
+    - name: Run tests [chrono rand serde]
+      run: cargo test --verbose --no-default-features --features "chrono rand serde"
+    - name: Run tests [time rand serde]
+      run: cargo test --verbose --no-default-features --features "time rand serde"
