--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,11 @@ categories = [
 [features]
 # The default set of optional packages. Most people will want to use these
 # packages, but they are strictly optional.
-default = ["ulid-generation", "serde"]
-ulid-generation = ["rand", "chrono"]
-ulid-generation-time = ["rand", "time"]
+default = ["rand", "time", "serde"]
 
 [dependencies]
 rand = { version = "0.8", optional = true }
-time = { version = "0.3", optional = true }
+time = { version = "0.3", optional = true, default_features = false, features = ["std", "formatting"] }
 chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
 
