add rocket integration

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
       run: cargo test --verbose
     - name: Run tests (no default features)
       run: cargo test --verbose --no-default-features
-    - name: Run tests (all features) [chrono time rand serde schemars]
+    - name: Run tests (all features) [chrono time rand serde]
       run: cargo test --verbose --no-default-features --features "chrono time rand serde"
     - name: Run tests [rand]
       run: cargo test --verbose --no-default-features --features "rand"
@@ -47,6 +47,8 @@ jobs:
       run: cargo test --verbose --no-default-features --features "serde"
     - name: Run tests [schemars]
       run: cargo test --verbose --no-default-features --features "schemars"
+    - name: Run tests [rocket]
+      run: cargo test --verbose --no-default-features --features "rocket"
     - name: Run tests [chrono rand serde]
       run: cargo test --verbose --no-default-features --features "chrono rand serde"
     - name: Run tests [time rand serde]
