--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ time = { version = "0.3", optional = true, default_features = false, features = 
 chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
 schemars = { version = "0.8", optional = true }
+rocket = { version = "0.5.0-rc.2", optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
@@ -47,3 +48,7 @@ harness = false
 [[test]]
 name = "schemars"
 required-features = ["schemars"]
+
+[[test]]
+name = "rocket"
+required-features = ["rocket"]
