--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -71,10 +71,10 @@ jobs:
     - name: rust-grcov
       uses: actions-rs/grcov@v0.1.5
     - name: Codecov
-      uses: codecov/codecov-action@v3.1.0
+      uses: codecov/codecov-action@v3.1.1
       with:
         # Repository upload token - get it from codecov.io. Required only for private repositories
         # token: # optional
         # Specify whether the Codecov output should be verbose
         verbose: true
-        fail_ci_if_error: true
+        fail_ci_if_error: false
