--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -1,25 +1,24 @@
-
 [package]
 name = "rusty_ulid-fuzz"
-version = "0.0.1"
-authors = ["Automatically generated"]
+version = "0.0.0"
 publish = false
-edition = "2018"
+edition = "2021"
 
 [package.metadata]
 cargo-fuzz = true
 
+[dependencies]
+libfuzzer-sys = "0.4"
+
 [dependencies.rusty_ulid]
 path = ".."
-[dependencies.libfuzzer-sys]
-git = "https://github.com/rust-fuzz/libfuzzer-sys.git"
-[dependencies.arbitrary]
-# breaks with 0.2
-version = "0.1"
 
 # Prevent this from interfering with workspaces
 [workspace]
 members = ["."]
+
+[profile.release]
+debug = 1
 
 [[bin]]
 name = "fuzz_from_str"
