--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ default = ["rand", "time", "serde"]
 
 [dependencies]
 rand = { version = "0.8", optional = true }
-time = { version = "0.3", optional = true, default_features = false, features = ["std", "formatting"] }
-chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
+time = { version = "0.3", optional = true, default-features = false, features = ["std", "formatting"] }
+chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
 schemars = { version = "0.8", optional = true }
 rocket = { version = "0.5.0-rc.2", optional = true}
