--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ time = { version = "0.3", optional = true, default-features = false, features = 
 chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }
 serde = { version = "1", optional = true }
 schemars = { version = "0.8", optional = true }
-rocket = { version = "0.5.0-rc.2", optional = true}
+rocket = { version = "0.5", optional = true}
 
 [dev-dependencies]
 criterion = "0.5"
